--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -4,81 +4,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Главная</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        body {
-            padding-left: 35vw;
-            width: 30%;
-            background-image: url("static/back2.jpg");
-            background-size: 20%;
-            color: black;
-        }
-        .back {
-            margin-top: 3vw;
-            background-color: #474350;
-            width: 30vw;
-            height: auto;
-            padding-left: 5vw;
-            padding-right: 5vw;
-            padding-bottom: 5vh;
-            margin-bottom: 3vh;
-            border-radius: 10px;
-        }
-        #name #cnt {
-            margin: 10px;
-        }
-        #name {
-            width: auto;
-            display: flex;
-            font-weight: bold;
-        }
-        #cnt {
-            width: auto;
-            text-align: right;
-            position: relative;
-        }
-        a {
-            color: black;
-            font-style: normal;
-        }
-        .pos {
-            font-size: 0.8vw;
-            padding: 0.8vw;
-            margin: 7px;
-            width: 20vw;
-            background-color: #fecdaa;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            border-radius: 10px;
-            transition: all 0.1s ease-in-out;
-        }
-        h1 {
-            font-size: 1.5vw;
-            padding-top: 2vw;
-            padding-bottom: 1.5vw;
-            text-align: center;
-            color: white;
-        }
-        .pos:hover {
-            margin-left: -5px;
-            transition: all 0.2s ease-in-out;
-            background-color: #ffe4c4;
-        }
-    </style>
+    <link href="{% static 'styles.css' %}" rel="stylesheet" type="text/css">
 </head>
-<body>
-<div class="back">
-    <h1>Лидерборд Тимуса <br> Лицей НИУ ВШЭ</h1>
-   {% for el in test %}
-   <form action="/stats/{{ el.2 }}">
-        <button type="submit" class="pos">
-            <div id="name"> {{ el.1 }}: {{ el.2 }} </div>
-            <div id="cnt">  {{ el.0 }} </div>
-        </button>
-    </form>
-    {% endfor %} 
-</div>
-
+<body>    
+    <div class="back">
+        <div id="btns">
+            {% if not user.is_authenticated %}
+                <a class="reglog" href="/reg/">
+                    Регистрация
+                </a>
+                <a class="reglog" href="/login/">
+                    Вход в лк
+                </a>
+            {% else %}
+                <div style="color: white; margin-right: 5px;">Вы зашли как {{ user.username }}</div>
+                <a class="reglog" href="/logout/">
+                    Выйти
+                </a>
+            {% endif %}
+        </div>
+        <h1>Лидерборд Тимуса <br> Лицей НИУ ВШЭ</h1>
+        {% for el in test %}
+            <form action="/stats/{{ el.2 }}">
+                <button type="submit" class="pos">
+                    <div id="name"> {{ el.1 }}: {{ el.2 }} </div>
+                    <div id="cnt">  {{ el.0 }} </div>
+                </button>
+            </form>
+        {% endfor %} 
+    </div>
 </body>
 </html>
